Fixing some conflicts and implementing serializable